--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -17,6 +17,14 @@
 .tarjeta{
   background-color: white;
 }
+section {
+  display: grid;
+  grid-template-areas: 'soloyo';
+  justify-items: center;
+ }
+ .personalizar{
+  grid-area: soloyo;
+}
 
 /*!
  * Bootstrap v5.1.3 (https://getbootstrap.com/)
